<resources>
    <string name="app_name">SPYSS</string>
    <string name="spyss">SPYSS</string>
    <string name="free_yoga_since_1980">Free Yoga Since 1980</string>
    <string name="introdesc"><![CDATA[SPYSS is a non-profit organization spearheading a movement for social enrichment, healthy & peaceful world by passing precious yogic knowledge for free of cost since last 40 years.]]></string>
    <string name="introduction">INTRODUCTION</string>
    <string name="our_history">Our History</string>
    <string name="history_desc">SPYSS had its genesis in 1980 through the active initiation of Shri A.R. Ramaswamay Anna to assist all sections of people in the society irrespective of religion, caste, creed or gender.SPYSS was started with the mentorship of Late Shri Ajit kumar, Late Shri Raghavendra Swamiji of Maladihalli by following the teaching Yogacharya Padmavibhushan Shri B K S Iyengar Guruji’s teaching methodology.</string>
    <string name="who_we_are">Who We Are?</string>
    <string name="whoweare_desc">An organization spearheading a movement for social enrichment through Yoga Sadhana.</string>
    <string name="what_we_do">What we do?</string>
    <string name="whatwedo_desc"><![CDATA[In SPYSS today lakhs of people are practicing yoga in its 1000+ branches across India & overseas through its 25,000+ trained Yoga teachers for Free.]]></string>
    <string name="our_value">Our Value</string>
    <string name="ourvalue_desc">Right Attitude:Team Spirit:Selfless Service:</string>
    <string name="our_motto">Our Motto</string>
    <string name="ourmoto_desc">Vasudhaiva Kutumbakam (The Whole World is One Family)</string>
    <string name="mission_vision"><![CDATA[Mission & Vision]]></string>
    <string name="vision_desc">Vision:To make the “Vasudhaiva Kutumbakam” (The World is one family) a living reality on earth.Mission: Strengthening the society by teaching Yoga for free</string>
    <string name="action_share">SHARE</string>
    <string name="action_explore">Open Maps</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_rationale_call">Call permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="msg_token_fmt">Token</string>
    <string name="fcm_message">fcmmessage</string>
    <string name="default_notification_channel_id">3</string>
</resources>
