<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:theme="@style/MyToolbarTheme"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/secondaryLightColor">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardSlider"
        app:cardCornerRadius="6dp"
        android:layout_margin="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/imageSlider"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:sliderAnimationDuration="600"
            app:sliderAutoCycleDirection="back_and_forth"
            app:sliderAutoCycleEnabled="true"
            app:sliderCircularHandlerEnabled="true"
            app:sliderIndicatorAnimationDuration="600"
            app:sliderIndicatorGravity="center_horizontal|bottom"
            app:sliderIndicatorMargin="15dp"
            app:sliderIndicatorOrientation="horizontal"
            app:sliderIndicatorPadding="3dp"
            app:sliderIndicatorRadius="2dp"
            app:sliderIndicatorSelectedColor="#5A5A5A"
            app:sliderIndicatorUnselectedColor="#FFF"
            app:sliderScrollTimeInSec="1"
            app:sliderStartAutoCycle="true" />

    </androidx.cardview.widget.CardView>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/cardSlider"
        >

        <RelativeLayout
            android:id="@+id/form_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/secondaryLightColor">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:layout_centerHorizontal="true"
            android:text="@string/introduction"
            android:textStyle="bold"
             />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:padding="@dimen/FIVE_DP"
            android:layout_centerHorizontal="true"
            android:text="@string/introdesc"
            android:layout_below="@+id/textView"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:padding="@dimen/FIVE_DP"
            android:layout_centerHorizontal="true"
            android:text="@string/our_history"
            android:textStyle="bold"
            android:layout_below="@+id/textView3"
            />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:padding="@dimen/FIVE_DP"
            android:layout_centerHorizontal="true"
            android:text="@string/history_desc"
            android:layout_below="@+id/textView2"
          />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/FIVE_DP"
            android:text="@string/who_we_are"
            android:layout_below="@+id/textView4"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/FIVE_DP"
            android:textColor="@color/primaryTextColor"
            android:layout_centerHorizontal="true"
            android:text="@string/whoweare_desc"
            android:layout_below="@+id/textView5"
            />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/primaryTextColor"
            android:padding="@dimen/FIVE_DP"
            android:textStyle="bold"
            android:text="@string/what_we_do"
            android:layout_below="@+id/textView6"
             />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/FIVE_DP"
            android:textColor="@color/primaryTextColor"
            android:layout_centerHorizontal="true"
            android:text="@string/whatwedo_desc"
            android:layout_below="@+id/textView7"
            />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/primaryTextColor"
            android:padding="@dimen/FIVE_DP"
            android:text="@string/our_value"
            android:textStyle="bold"
            android:layout_below="@+id/textView8"
           />


        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColor"
            android:padding="@dimen/FIVE_DP"
            android:layout_centerHorizontal="true"
            android:text="@string/ourvalue_desc"
            android:layout_below="@+id/textView9"
           />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/primaryTextColor"
            android:padding="@dimen/FIVE_DP"
            android:src="@drawable/right_attitude"
            android:layout_below="@+id/textView10"
           />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/primaryTextColor"
            android:padding="@dimen/FIVE_DP"
            android:textStyle="bold"
            android:text="@string/our_motto"
            android:layout_below="@+id/imageView10"
            />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/FIVE_DP"
            android:textColor="@color/primaryTextColor"
            android:text="@string/ourmoto_desc"
            android:layout_below="@+id/textView11"
            />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/primaryTextColor"
            android:padding="@dimen/FIVE_DP"
            android:text="@string/mission_vision"
            android:textStyle="bold"
            android:layout_below="@+id/textView12"
             />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/FIVE_DP"
            android:textColor="@color/primaryTextColor"
            android:text="@string/vision_desc"
            android:layout_below="@+id/textView13"
           />


        </RelativeLayout>

    </ScrollView>
    </RelativeLayout>



